# windows-vcam-cmake-base

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  dllmain.cpp  virtual-cam.cpp  virtual-cam.def  virtual-cam.h
